<resources>
    <string name="app_name">Mon Carnet Covid</string>

    <!-- Accès à la caméra et persmissions -->
    <string name="demander_camera">Accès à la caméra</string>
    <string name="explication_permission">
        Afin de scanner le QR Code contenant le certificat, Mon Carnet Covid doit pouvoir accéder à votre caméra
    </string>
    <string name="ok">C\'est noté</string>
    <string name="annuler">Annuler</string>

    <!-- Onboarding -->
    <string name="onboarding_bienvenue_titre">Bienvenue dans Mon Carnet Covid</string>
    <string name="onboarding_bienvenue_description">
        Cette application facilite la gestion de votre passe sanitaire.
        \n\n
        Libre, son <a href="https://github.com/Searev/MonCarnetCovid">code source est ouvert</a> si vous souhaitez en comprendre le fonctionnement, ou l’améliorer.
    </string>
    <string name="onboarding_bienvenue_btn">Commencer</string>
    <string name="onboarding_fonctionnement_titre">Numérisez votre passe sanitaire</string>
    <string name="onboarding_fonctionnement_description">
        Scannez vos certificats de test RT-PCR, antigéniques, ou votre attestation de vaccination pour les présenter facilement lors d’un contrôle.
    </string>
    <string name="onboarding_fonctionnement_btn">Suivant</string>
    <string name="onboarding_privacy_titre">Informations traitées par l’application</string>
    <string name="onboarding_privacy_description">
        Afin de numériser votre pass sanitaire et de le présenter lors d’un contrôle, Mon Carnet
        Covid devra accéder à certaines informations vous concernant :
        \n\n
        - Données d’état civil : nom, prénom\n
        - Données de santé : résultat de test, type de vaccin, nombre d’injection\n
        \n\n
        Ces informations resteront privées, et stockées uniquement sur votre téléphone. Vous
        pourrez les supprimer à tout moment.
    </string>
    <string name="onboarding_privacy_btn">J\’accepte ce traitement</string>

    <!-- Gestion des certificats -->
    <string name="import_premier_certificat">Importez votre premier certificat</string>
    <string name="import_premier_certificat_desc">
        Si vous disposez d\'un certificat COVID sur papier ou PDF et que vous souhaitez l\'ajouter
        à l\'application, cliquez sur le bouton ci-dessous.
    </string>
    <string name="mes_certificats">Mes certificats</string>
    <string name="afficher_code">Afficher le code</string>
    <string name="precedent">Revenir à la liste</string>
    <string name="test">Certificat de test</string>
    <string name="test_resultat">Résultat du test</string>
    <string name="test_positif">Test positif</string>
    <string name="test_negatif">Test négatif</string>
    <string name="vaccination">Vaccination</string>
    <string name="attestation_test">Attestation de test</string>
    <string name="certificat_vaccination">Certificat de vaccination</string>
    <string name="attestation_retablissement">Attestation de rétablissement</string>
    <string name="aggrandir_code">Appuyez sur le code pour l\'aggrandir</string>
    <string name="retour_certificat">Revenir au certificat</string>
    <string name="certificat_date_prelevement">Prélèvement réalisé le %s</string>
    <string name="certificat_date_injection">Injection réalisée le %s</string>
    <string name="certificat_date_validite">Valide à partir du %s</string>
    <string name="detenteur">Détenteur/Détentrice</string>
    <string name="date_naissance">Date de naissance</string>

    <!-- Détail d'un certificat -->
    <string name="afficher_details">Afficher plus de détails</string>
    <string name="masquer_details">Masquer les détails</string>
    <string name="type_vaccin">Vaccin administré</string>
    <string name="type_test">Type de test</string>
    <string name="date_injection">Date de dernière injection</string>
    <string name="date_validite">Valide à partir du</string>
    <string name="date_prelevement">Date du prélèvement</string>
    <string name="nb_doses">Nombre de doses reçues</string>

    <string name="effacer_certificat">Supprimer le certificat</string>
    <string name="effacer_certificat_titre">Suppression d\'un certificat</string>
    <string name="effacer_certificat_confirmation">
        Voulez-vous vraiment effacer ce certificat de l\'application ?
    </string>

    <!-- Scan -->
    <string name="ajouter_qr_code">Ajouter un certificat</string>
    <string name="about_btn">A propos de Mon Carnet Covid</string>
    <string name="scan_instruction">Scannez le QR Code de votre certificat</string>
    <string name="scan_reussi">Certificat ajouté</string>
    <string name="scan_echec">Le code scanné ne contient pas de certificat valide</string>

    <!-- A Propos -->
    <string name="a_propos">A Propos</string>
    <string name="auteur">
        Conçu et développé par Bastien Huber.
        \n\n
        Le code source de cette application est Open Source et peut être trouvé sur github.
    </string>
    <string name="github_lien">Voir le code source</string>
    <string name="gestion_donnees">Gestions des données</string>
    <string name="gestion_donnees_desc">
        Vos données sont stockées localement sur votre téléphone. Le QR Code ou 2D-Doc de partage
        permet à un autre appareil de scanner les informations contenues dans votre certificat.
    </string>
    <string name="fonctionnement_app">Fonctionnement de l\'application</string>
    <string name="fonctionnement_app_desc">
        Pour ajouter un certificat COVID à l\'application, vous aurez besoin du certificat vous ayant
        été remis après votre test, vaccination ou rétablissement. Scannez alors, depuis
        l\'application, le code QR présent sur ce document et correspondant au certificat
        Européen. Il apparaitra alors dans l\'application.
        \n\n
        Vous pouvez ajouter autant de certificats que vous le souhaitez.
    </string>
    <string name="qr_code">Code QR</string>
    <string name="qr_code_fonctionnement">
        Le code QR contient toutes les informations qui apparaissent sur votre certificat papier :
        données d\'état civil du détenteur ou de la détentrice, données médicales du test, de la
        vaccination… auquel est ajouté une signature permettant d\'attester de l\'authenticité du
        document
    </string>
</resources>