<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.OnboardingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/onboardingBtn"
        android:paddingHorizontal="@dimen/margin_24"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/onboardingImage"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="fitCenter"
                tools:ignore="ContentDescription"
                tools:src="@drawable/covid_19_precautions" />

            <TextView
                android:id="@+id/onboardingTitre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:textAppearance="?attr/textAppearanceHeadline5"
                tools:text="@string/onboarding_bienvenue_titre" />

            <TextView
                android:id="@+id/onboardingDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12"
                android:autoLink="web"
                android:linksClickable="true"
                android:textIsSelectable="true"
                tools:text="@string/onboarding_privacy_description" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/onboardingBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/onboarding_bienvenue_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/margin_24"/>


</androidx.constraintlayout.widget.ConstraintLayout>