<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/detailCertificatTitreAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            tools:title="@string/certificat_vaccination"
            app:menu="@menu/menu_certificat"
            app:navigationIcon="@drawable/ic_baseline_clear_24"
            style="@style/Widget.MaterialComponents.Toolbar.Surface" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.DetailCertificatFragment">

        <ImageView
            android:id="@+id/barcodeImageView"
            android:layout_width="@dimen/qr_code_fullscreen_size"
            android:layout_height="@dimen/qr_code_fullscreen_size"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/barcodeImageAggrandirTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintTop_toBottomOf="@id/barcodeImageView"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/aggrandir_code"
            android:textAlignment="center" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/margin_24"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@id/barcodeImageAggrandirTxt"/>

        <TextView
            android:id="@+id/barcodeDetenteurLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_24"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            android:text="@string/detenteur"/>

        <TextView
            android:id="@+id/barcodeDetenteur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/barcodeDetenteurLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="?attr/textAppearanceBody1"
            tools:text="Jean Dupont" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>